--- a/styles.css
+++ b/styles.css
@@ -80,4 +80,66 @@ h1{
 .section-2{
     background: #f9faf8;;
     height: 50vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
 }
+
+.two-body-content img{
+    height: 100px;
+    width: 100px;
+}
+
+.two-head-text{
+    font-size: 36px;
+    font-weight: 1000;
+    color: #1f2937;
+    margin-bottom: 30px;
+    margin-top: 30px;
+
+}
+
+.two-body-content{
+    display: flex;
+    justify-content: center;
+    justify-content: space-around;
+    gap: 20px;
+    align-items: center;
+    margin-top: 50px;
+}
+
+.info{
+    flex-basis: 250px;
+
+}
+
+.section-3{
+    background: #e5e7eb;
+    height: 300PX;
+    
+}
+.quote{
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+    color: #1f2937;
+
+}
+
+.container-3{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center
+
+}
+
+.quote-owner{
+    font-weight: bold;
+    margin-top: 15px;
+}    
+  
+
+
+
