--- a/styles.css
+++ b/styles.css
@@ -138,7 +138,57 @@ h1{
 .quote-owner{
     font-weight: bold;
     margin-top: 15px;
-}    
+}
+
+.section-4{
+    background-color: #f9faf8;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.c-t-a-box{
+    background-color: #3882F6;
+    height: 100px;
+    width: 1000px;
+    border-radius: 8px;
+    color: #f9faf8;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.cta-header{
+    font-weight: bold;
+
+}
+
+.signup-b4{
+    outline: none;
+    background-color: #3882F6;
+    color: #f9faf8;
+    border: 2px white solid;
+    border-radius: 5px;
+    padding: 8px 15px;
+    font-weight: bold;
+}
+
+
+footer{
+    height: 120px;
+    background-color: #1f2937;
+    color: #f9faf8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+
+
+
   
 
 
